				Dear Emacs, please make this -*-Text-*- mode!
	**************************************************
	*						 *
	*	       1.5 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.5.1


BUG FIXES

    o	Rdconv now skips CRs in input files, even on Unix.

    o	readBin() had a (very slow) memory leak if changing size or reading
	character strings.  writeChar() had a memory leak.

    o	polygon() and rect() with lty = "blank" were omitting the fill
	colour (if present).  symbols(circles=, lty="blank") was
	drawing the border of the disks.

    o	Subsetting non-existent rows in a data frame would produce
	missing row names, which are not allowed.

    o   On Unix, R_PAPERSIZE was set to '' instead of 'a4' as default on
	systems without paperconf.



		CHANGES IN R VERSION 1.5.0


USER-VISIBLE CHANGES

    o	XDR support is now guaranteed to be available, so the default
	save format will always be XDR binary files, and it is safe to
	distribute data in that format.  (We are unaware of any
	platform that did not support XDR in recent versions of R.)

	gzfile() is guaranteed to be available, so the preferred
	method to distribute sizeable data objects is now via
	save(compress = TRUE).

    o	pie() replaces piechart() and defaults to using pastel colours.

    o	formatC has new arguments (see below) and formatC(*, d = <dig>)
	is no longer valid and must be written as formatC(*, digits = <dig>).

    o	Missingness of character strings is treated much more
	consistently, and the character string "NA" can be used as a
	non-missing value.

    o   summary.factor() now uses a stable sort, so the output will
	change where there are ties in the frequencies.


NEW FEATURES

    o   Changes in handing missing character strings:

        -  "NA" is no longer automatically coerced to a missing value
	   for a character string.  Use as.character(NA) where a missing
	   value is required, and test via is.na(x) not x == "NA".